--- a/filtro.html
+++ b/filtro.html
@@ -10,11 +10,12 @@
 
 	<body>
 		<div>
+			<!-- coloque un id al input para poder manejarlo desde el js y cambie la ruta del documento js -->
 			<input id="textInput" type="text" placeholder="Seleccioná un color o tipo" />
 			<button>Filtrar</button>
 			<h1>Lista de productos</h1>
 			<div id="lista-de-productos"></div>
 		</div>
-		<script src="../filtro.js"></script>
+		<script src="./filtro.js"></script>
 	</body>
 </html>
